<resources>
    <string name="app_name">SpendingTracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="HomeHeader">Classify Transaction</string>
    <string name="HomeHeaderMedium">Classify this transaction</string>
    <string name="HomeHeaderSmall">into a particular category</string>
    <!-- Transaction Categories -->

    <string name="Withdrawal">Withdrawal</string>
    <string name="Transfer">Transfer</string>
    <string name="Bills">Bills</string>
    <string name="Purchase">Purchase</string>
    <string name="Entertainment">Entertainment</string>
    <string name="Transport">Transport</string>

    <!-- SubCategory -->
    <string name="Food">Food</string>
    <string name="Clothing">Clothing</string>


</resources>
